at least it compiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
+
+set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
+
 cmake_minimum_required(VERSION 3.1)
-project(zgmos)
+project(zgmos C ASM)
 
 cmake_policy(SET CMP0054 NEW)
 
@@ -7,11 +10,46 @@ set_property(GLOBAL PROPERTY PROJ_ROOT "${CMAKE_CURRENT_LIST_DIR}")
 get_property(proj_root GLOBAL PROPERTY PROJ_ROOT)
 message(STATUS "Global property PROJ_ROOT is set to ${proj_root}")
 
+include(${proj_root}/cmake/macros.cmake)
 include(${proj_root}/cmake/toolchain.cmake)
+include(${proj_root}/cmake/buildtype.cmake)
 
-message(STATUS "${CMAKE_C_COMPILER}")
+add_compile_flags(LD
+        -nostartfiles
+        -static
+        -Wl,--gc-sections
+        -Wl,-static
+        -Wl,--start-group
+        -Wl,--whole-archive
+        -Wl,--no-whole-archive
+        -Wl,--end-group
+        -Wl,-EL
+        -Wl,--no-relax
+        -T ${proj_root}/lds/linker.ld
+        )
 
+# C Flags Settings
+add_compile_flags(BOTH
+        -mcmodel=medany
+        -mabi=lp64d
+        -march=rv64gc
+        -fno-common
+        -ffunction-sections
+        -fdata-sections
+        -fstrict-volatile-bitfields
+        -fno-zero-initialized-in-bss
+        -ffast-math
+        -fno-math-errno
+        -fsingle-precision-constant
+        -O0
+        -ggdb
+        -Wall
+        -Werror=all)
 
+add_compile_flags(C -std=gnu11 -Wno-pointer-to-int-cast)
+include(${proj_root}/cmake/fix-9985.cmake)
 
+add_executable(${PROJECT_NAME} "./kernel/entry.s" "./kernel/main.c")
+set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)
 
 
